--- a/app/templates/crearnuevousuario.html
+++ b/app/templates/crearnuevousuario.html
@@ -9,6 +9,49 @@
     <link rel="stylesheet" href="../static/styles/styles.css">
 </head>
 <body>
+
+  <nav class="navbar navbar-expand-lg  navbar-light" style="background-color:#ffc107;">
+        <div class="container-fluid">
+          <a href="index.html">
+            <img src="../static/images/logosinfondo.png"  alt="" style="height: 30px;">
+          </a>
+          
+          <a class="navbar-brand" href="index.html">Merka Logic</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" style="margin-left: auto;"> 
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="usuarios.html">Usuarios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="facturacion.html">Facturación</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="clientes.html">Gestión de clientes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inventarios.html"> Inventarios</a>
+              </li>
+              <li>
+                <div>
+                  <a href="inicio-de-sesion.html">
+                    <img src="../static/images/icono cerra sesion.png" alt="" style="width: 30px;" > 
+                  </a>
+                </div>
+                
+               
+                
+               
+              </li>
+            </ul>
+          </div>
+        </div>
+  </nav>
     <div class="container mt-5">
         <h2>Nuevo usuario</h2>
         <form id="formUsuario" onsubmit="return validarFormulario()">
