--- a/app/templates/inicio-de-sesion.html
+++ b/app/templates/inicio-de-sesion.html
@@ -38,7 +38,7 @@
                         <img src="D:\Users\Usuario\Desktop\MerkaLogic\app\static\images\logosinfondo.png" alt="" style=" width: 50px;" class="">
                     </div>
                     <h3 class="card-title text-center">Inicio de Sesión</h3>
-                    <form>
+                    <form method="post" >
                         <div class="mb-3">
                             <label for="cedula" class="form-label">Cédula</label>
                             <input type="text" class="form-control" id="cedula" placeholder="Ingrese su cedula sin puntos ni comas" required>
